# signing-service

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  entrypoint.sh  main.py  manage.py  pyproject.toml  reloadSSL.sh  requirements.txt  server-ca.crt
.venv_311/: pyvenv.cfg
apache/: django.conf
apache/ssl/: cert.pem  chain.pem  key.pem
certs/: certificate.crt  private.key
django_project/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
locale/de/LC_MESSAGES/: django.po
nginx/: Dockerfile  default.conf  entrypoint.sh
nginx/CA/: client-ca.crt  client-ca.key  client-ca.srl
nginx/client/: client.crt  client.csr  client.key  client.pem
resources/: verification.py
signers/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
signers/migrations/: 0001_initial.py  0002_alter_signer_key_length.py  0002_alter_signer_signing_algorithm_and_more.py  0003_alter_signer_certificate_alter_signer_private_key_and_more.py  0003_alter_signer_key_length.py  0004_alter_signer_hash_function_and_more.py  0004_signedmessage_token.py  0005_alter_signer_hash_function.py  0005_remove_signedmessage_token_and_more.py  0006_alter_signer_signing_algorithm.py  0006_remove_signedmessage_cert_subject.py  0007_signedmessage_cert_subject.py  0007_signer_curve_alter_signer_key_length.py  0008_alter_signer_curve.py  0009_alter_signer_curve.py  0010_signedmessage.py  0011_alter_signer_curve_alter_signer_key_length.py
signers/utils/: __init__.py  keygen.py
templates/: addSigner.html  addSigner1.html  base.html  signer_detail.html  signerlist.html
templates/users/: signin.html  signup.html  token_form.html  token_list.html
users/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_usertoken_created_at_usertoken_expires_at_and_more.py
